# sjoa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: debian-12.2.0-amd64-DVD-1.iso.torrent  magnet.txt
sjoa/: __init__.py  __main__.py  decoder.py  display.py  models.py  parser.py  utils.py
tests/: conftest.py  test_decoder.py  test_display.py  test_main.py  test_utils.py
