[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sjoa"
dynamic = ["version"]
description = "Command-line tool to read metadata from torrent files or magnet URLs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Martin Simon", email = "martin@simon.tf"},
]
dependencies = [
    "bencodepy>=0.9.5",
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/barnumbirr/sjoa"
Issues = "https://github.com/barnumbirr/sjoa/issues"
Download = "https://github.com/barnumbirr/sjoa/archive/refs/heads/master.zip"

[project.scripts]
sjoa = "sjoa:main"

[tool.setuptools.dynamic]
version = {attr = "sjoa.__version__"}

[tool.setuptools.packages.find]
include = ["sjoa*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
